# sfstickrpg

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  clean  configure  make
extlib/: CMakeLists.txt
resources/Maps/: mat1
resources/maps/: map0
resources/xcf/: player.xcf
src/: CMakeLists.txt
src/core/: asset_manager.cpp  asset_manager.hpp  eventHandling.cpp  eventHandling.hpp  game_engine_data.hpp  notcopyable.hpp  object.hpp  observerptr.hpp  state_game.hpp  window.cpp  window.hpp
src/game/: entity.hpp  game.cpp
src/game/States/: game_state_running.cpp  state_map_editor.cpp  state_map_editor.hpp
src/graphics/: drawable.cpp  drawable.hpp  map.cpp  map.hpp  map_base.cpp  map_base.hpp  tileset.cpp  tileset.hpp  tileset_base.cpp  tileset_base.hpp
src/graphics/old/: map.cpp  map.hpp  tileset.cpp  tileset.hpp
src/gui/: tilesetWidget.cpp  tilesetWidget.hpp  widget.hpp
src/sfstickrpg/: entity.hpp  game.cpp  game_engine_data.hpp  game_state_running.cpp  game_state_running.hpp  game_state_start.cpp  game_state_start.hpp  map.cpp  map.hpp  state_manager.cpp  state_manager.hpp  tileset.cpp  tileset.hpp
src/sfstickrpg/Core/: asset_manager.cpp  asset_manager.hpp  game_engine_data.hpp  game_state.hpp  state.hpp  state_game.hpp  state_manager.hpp
src/sfstickrpg/Entities/: player_entity.cpp  player_entity.hpp
src/sfstickrpg/GameEngine/: asset_manager.cpp  asset_manager.hpp  game_engine_data.hpp  state.hpp  state_game.hpp  state_manager.cpp
src/sfstickrpg/States/: game_state_running.cpp  game_state_running.hpp
src/tools/: CMakeLists.txt
src/tools/mapeditor/: mapeditor.cpp
